
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
mac getIpByName liefert name von IPnum

opsi-script (4.12.4.37) stable; urgency=low

  * oscertificates: finalize function for linux /mac

-- d.oertel <d.oertel@uib.de> Tue, 01 Feb 2022 15:00

opsi-script (4.12.4.36) stable; urgency=low

  * oszip: show progressbar while zipping or unzipping files
  * oswebservice: getOpsiModules: integrate new backend_getLicensingInfo method with fallback to old backend_info
  * oswebservice: retrieveJSONObject: retry on other communication mode only on 400- bad request result
  * oswebservice: retrieveJSONObjectByHttpPost: retry on other communication mode only on 400- bad request result
  * oswebservice: getOpsiModules: Legal notice to our license protection
  * osfunclin: linIsUefi: implemented uefi test for linux
  * boolean function runningOnUefi now also supports linux
  * updated unit uSMBIOS (TSMBIOS) (https://code.google.com/p/tsmbios/)
  * uSMBIOS: with fix https://github.com/RRUZ/tsmbios/issues/15
  * osparser: fix %Systemroot% and %SystemDrive% for terminal servers ; references #4711
  * oswebservice: better opsi 4.0 compatibility by investigating the server response
  * osurlparser: createUrl: initialize uriobj.HasAuthority

-- d.oertel <d.oertel@uib.de> Wed, 19 Jan 2022 15:00

opsi-script (4.12.4.35) stable; urgency=low

  * osparser: getMSVersionMap: remove double ReleaseID=
  * osparser: executeWith: AllSigned Hack: use:
        "Get-Content -Path '+ tempfilename +' | Out-String | Invoke-Expression"
  * osparser: new function getMSVersionName: string
  * oslinmount: replace getGeneralConfigValue by configState_getObjects
  * osprocesses: new isProcessChildOf(searchproc,parentproc: string): boolean;
  * new boolean opsi-script function: isProcessChildOf(<searchprocstr>, <parentprocstr>): bool;
    implemented for WLM
  * new opsi-script constant %opsiscriptprocname% represents the name of the